[gd_scene load_steps=2 format=2]

[ext_resource path="res://InstanceEditor.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="HSplitContainer" type="HSplitContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
split_offset = 795

[node name="TextEdit" type="TextEdit" parent="HSplitContainer"]
margin_right = 795.0
margin_bottom = 720.0
syntax_highlighting = true
show_line_numbers = true

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer"]
margin_left = 807.0
margin_right = 1080.0
margin_bottom = 720.0

[node name="ButtonAddInstance" type="Button" parent="HSplitContainer/VBoxContainer"]
margin_right = 273.0
margin_bottom = 20.0
text = "Add Instance"

[node name="ButtonSaveInstance" type="Button" parent="HSplitContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 273.0
margin_bottom = 44.0
text = "Save Instance"

[node name="LineEditInstanceName" type="LineEdit" parent="HSplitContainer/VBoxContainer"]
margin_top = 48.0
margin_right = 273.0
margin_bottom = 72.0

[node name="ItemList" type="ItemList" parent="HSplitContainer/VBoxContainer"]
margin_top = 76.0
margin_right = 273.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3
items = [ "Instance1", null, false, "Item 1", null, false ]
